# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1006 2012/04/22 23:53:24 zmedico Exp $

*portage-2.2.0_alpha101 (22 Apr 2012)

  22 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha101.ebuild:
  2.2.0_alpha101 version bump. This includes all of the fixes in
  portage-2.1.10.57. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.57 (22 Apr 2012)

  22 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.57.ebuild:
  2.1.10.57 version bump. This fixes bug #411835 (use example.com in docs), bug
  #411897 (fix TypeError in perform_all checksum function), bug #412161 (avoid
  redundant news display), bug #412391 (emerge --depclean bails out due to
  invalid internal caching), bug #412453 (cleanup hardlink code), bug #412845
  (show config updates after preserve-libs messages), and bug #412865 (add
  $T/build.log symlink to PORT_LOGDIR), Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

  07 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.55.ebuild,
  -portage-2.2.0_alpha99.ebuild:
  Remove old versions.

*portage-2.2.0_alpha100 (05 Apr 2012)

  05 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha100.ebuild:
  2.2.0_alpha100 version bump. This includes all of the fixes in
  portage-2.1.10.56. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.56 (05 Apr 2012)

  05 Apr 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.56.ebuild:
  2.1.10.56 version bump. This fixes bug #386901 (emerge progress counter for
  --unmerge), bug #410687 (selinux sandbox violation for
  /sys/fs/selinux/context), and bug #410801 (emerge hang after merge list
  display triggered by slot conflict). Bug #409383 tracks all bugs fixed since
  portage-2.1.10.49.

  04 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.44.ebuild,