@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1006 2012/04/22 23:53:24 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1008 2012/04/26 15:00:54 aballier Exp $
+
+  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
+  portage-2.2.0_alpha101.ebuild:
+  keyword ~amd64-fbsd
+
+  25 Apr 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.10.56.ebuild,
+  -portage-2.2.0_alpha100.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha101 (22 Apr 2012)
 
